samples/_failures_safe/1761448285_805b75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4dac6bbb.c: In function ‘main’:
./samples/SAFE/__tmp_4dac6bbb.c:154:32: error: expected ‘)’ at end of input
  154 |         } else if (strcmp(input
      |                          ~     ^
      |                                )
./samples/SAFE/__tmp_4dac6bbb.c:154:20: error: too few arguments to function ‘strcmp’
  154 |         } else if (strcmp(input
      |                    ^~~~~~
In file included from ./samples/SAFE/__tmp_4dac6bbb.c:4:
/usr/include/string.h:156:12: note: declared here
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |            ^~~~~~
./samples/SAFE/__tmp_4dac6bbb.c:154:9: error: expected declaration or statement at end of input
  154 |         } else if (strcmp(input
      |         ^
./samples/SAFE/__tmp_4dac6bbb.c:154:9: error: expected declaration or statement at end of input
